# cng-formats-benchmark

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docs.yml  pr-title.yml  release.yml
configs/: README.md
configs/benchmarks/: example_cog.yaml  example_sentinel2_maja_cog.yaml  example_sentinel2_maja_geozarr.yaml  example_swot_lakesp_geoparquet.yaml  example_swot_pixc_copc.yaml  example_swot_raster100m_geozarr.yaml  synthetic_cog.yaml  synthetic_geozarr.yaml
configs/datasets/: example_cog.yaml  example_sentinel1_rtc.yaml  example_sentinel2_maja.yaml  example_swot_lakesp_prior.yaml  example_swot_pixc.yaml  example_swot_raster100m.yaml  synthetic_cog.yaml
deploy/: README.md  docker-compose.yml
deploy/helm/cng-benchmark/: Chart.yaml  values-lab-swot-lakesp.yaml  values-lab-swot-pixc.yaml  values-lab-swot-raster100m.yaml  values-lab.yaml  values-local.yaml  values.yaml
deploy/helm/cng-benchmark/templates/: _helpers.tpl  configmap.yaml  minio.yaml  results-pvc.yaml  runner-job.yaml  s3-secret.yaml  titiler-xarray.yaml  titiler.yaml
docker/: Dockerfile.runner
docs/: architecture.md  configuration.md  deployment.md  getting-started.md  index.md  releasing.md
notebooks/: geozarr-parameters.ipynb
src/cng_benchmark/: __init__.py  cli.py  config.py  drivers.py  fixtures.py  gdal_env.py  models.py  registry.py  report.py  runner.py  storage.py  tiers.py  vrt.py
src/cng_benchmark/datasets/: __init__.py  base.py  granule.py  sentinel1.py  sentinel2.py  single_object.py  swot.py  swot_lakesp.py  swot_pixc.py  zip_delivery.py
src/cng_benchmark/formats/: __init__.py  base.py  cog.py  copc.py  geoparquet.py  geozarr.py
src/cng_benchmark/metrics/: __init__.py  display.py  display_tiles.py  layout.py  objects.py  read.py  write.py
tests/: test_cli.py  test_cog.py  test_config.py  test_copc.py  test_datasets.py  test_display_tiles.py  test_drivers.py  test_fixtures.py  test_formats.py  test_gdal_env.py  test_geoparquet.py  test_geozarr.py  test_layout.py  test_metrics.py  test_models.py  test_objects.py  test_registry.py  test_report.py  test_runner.py  test_runner_dataset.py  test_storage.py  test_tiers.py  test_vrt.py
