[project]
name = "cng-benchmark"
version = "0.3.0"
description = "Deployable benchmarking system for cloud-native geospatial formats"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Development Seed" }]
keywords = ["benchmark", "cloud-native", "geospatial", "cog", "zarr", "copc", "geoparquet"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.scripts]
cng-benchmark = "cng_benchmark.cli:app"

# Optional extras keep the core harness import-light and unit-testable in
# isolation. The deployable runner image installs both; CI's unit-test job uses
# `dev` (which pulls in `s3` so the storage path is exercised, but not the heavy
# geo stack — geo tests skip when rasterio is absent).
[project.optional-dependencies]
s3 = [
    "boto3>=1.34",
]
cog = [
    "rasterio>=1.3",
    "rio-cogeo>=5",
    "morecantile>=5",
    "matplotlib>=3.8",
]
# GeoZarr v3 sharded writes need zarr v3; rioxarray reads the source raster into a
# georeferenced xarray array. zarr + xarray + numpy are also pulled into `dev`
# (below) so the sharding-lever / enumerate / layout logic is unit-tested in CI on
# synthetic in-memory arrays — only the rioxarray source-read path skips there.
geozarr = [
    "zarr>=3",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "s3fs>=2024",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "boto3>=1.34",
    "moto[s3]>=5",
    "zarr>=3",
    "xarray>=2024.1",
    "numpy>=1.26",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cng_benchmark"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"