[project]
name = "cng-benchmark"
version = "0.5.0"
description = "Deployable benchmarking system for cloud-native geospatial formats"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Development Seed" }]
keywords = ["benchmark", "cloud-native", "geospatial", "cog", "zarr", "copc", "geoparquet"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.scripts]
cng-benchmark = "cng_benchmark.cli:app"

# Optional extras keep the core harness import-light and unit-testable in
# isolation. The deployable runner image installs both; CI's unit-test job uses
# `dev` (which pulls in `s3` so the storage path is exercised, but not the heavy
# geo stack — geo tests skip when rasterio is absent).
[project.optional-dependencies]
s3 = [
    "boto3>=1.34",
]
cog = [
    "rasterio>=1.3",
    "rio-cogeo>=5",
    "morecantile>=5",
    "matplotlib>=3.8",
]
# GeoZarr v3 sharded writes need zarr v3; rioxarray reads the source raster into a
# georeferenced xarray array. zarr + xarray + numpy are also pulled into `dev`
# (below) so the sharding-lever / enumerate / layout logic is unit-tested in CI on
# synthetic in-memory arrays — only the rioxarray source-read path skips there.
geozarr = [
    "zarr>=3",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "s3fs>=2024",
]
# GeoParquet writes need geopandas (1.0+, for the covering-bbox column and bbox
# read filter) on pyarrow; pyogrio is the OGR driver that reads the source
# shapefile. geopandas + pyarrow + shapely are also pulled into `dev` (below) so
# the row-group lever / enumerate / layout / vector-read logic is unit-tested in
# CI on a synthetic GeoDataFrame — only the pyogrio source-read path skips there.
geoparquet = [
    "geopandas>=1.0",
    "pyarrow>=14",
    "shapely>=2",
    "pyogrio>=0.7",
    "s3fs>=2024",
]
# COPC writes use copclib (the C++ COPC library's pip wheel — no system PDAL) and
# laspy reads them back with octree-node spatial queries; xarray + h5netcdf read a
# SWOT PIXC pixel_cloud group as points. All are manylinux wheels, so the
# octree-builder / enumerate / layout / read core is unit-tested in CI on a
# synthetic point cloud — the same wheels-only property the other extras keep.
copc = [
    "copclib>=2.6",
    "laspy[lazrs]>=2.5",
    "xarray>=2024.1",
    "h5netcdf>=1.3",
    "h5py>=3.10",
    "s3fs>=2024",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "boto3>=1.34",
    "moto[s3]>=5",
    "zarr>=3",
    "xarray>=2024.1",
    "numpy>=1.26",
    "geopandas>=1.0",
    "pyarrow>=14",
    "shapely>=2",
    "copclib>=2.6",
    "laspy[lazrs]>=2.5",
    "h5netcdf>=1.3",
    "h5py>=3.10",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cng_benchmark"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"